k8s/40-security/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: mp2-ghazi
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-frontend
  namespace: mp2-ghazi
spec:
  podSelector:
    matchLabels:
      app: taskapp
      tier: frontend
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-api
  namespace: mp2-ghazi
spec:
  podSelector:
    matchLabels:
      app: taskapp
      tier: api
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: taskapp
              tier: frontend
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-and-backup-to-db
  namespace: mp2-ghazi
spec:
  podSelector:
    matchLabels:
      app: taskapp
      tier: db
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: taskapp
              tier: api
        - podSelector:
            matchLabels:
              app: taskapp
              tier: backup
      ports:
        - protocol: TCP
          port: 5432
